# traffic-surveys-automation

./: .gitattributes  .gitignore  MODELS.md  README.md  docker-compose.yaml
backend/: Dockerfile  Makefile  alembic.ini  config.json  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
backend/cli/: analyse.py  count_vehicles.py  file_export.py  model.py  show_track_visualization.py  video_export.py
backend/migrations/: env.py
backend/migrations/versions/: 2022-02-20-10-53-ae267399f80d_create_source_file_.py  2022-02-20-11-06-c3d9c8da961a_create_lines_table.py  2022-02-26-08-47-10a8232a56c5_add_name_to_a_task.py  2022-02-26-13-18-41608b05c0b1_create_source_files_.py  2022-04-06-21-51-cd0fd4a20457_drop_output_file_.py  9d6ff99e2a76_create_.py  acbd8bf7d495_create_.py
backend/test/integration/: test_deep_sort.py  test_sort.py
backend/test/unit/: test_bbox.py  test_kalman_filter.py  test_kalman_tracker.py
backend/tsa/: bbox.py  constants.py  cv2_utils.py  enums.py  exporter.py  logging.py  monitoring.py  np_utils.py  tf_utils.py  typing.py  utils.py  visualization.py
backend/tsa/app/: app.py  celery.py  celery_tasks.py  database.py  disk_manager.py  enums.py  exceptions.py  main.py  schema.py
backend/tsa/config/: __init__.py  base.py  deep_sort.config.json  efficientdet.config.json  sort.config.json
backend/tsa/cv2/: kalman_filter.py  kalman_tracker.py  line_draw.py  video_capture.py
backend/tsa/dataclasses/: curve.py  frames.py  track.py
backend/tsa/datasets/: __init__.py  abstract.py  frames.py  video.py
(+91 files in other folders)
