[tool.poetry]
name = "traffic-survey-automator-be"
version = "1.0.0"
description = """
    Backend for traffic survey automation sofware which uses deep learning and machine learning for detecting and
    tracking vehilces in videos.
"""
license = "GPL-3.0-only"
authors = ["Ondrej Pudiš <pudisond@fit.cvut.cz>"]
repository = "https://github.com/opendatalabcz/traffic-surveys-automation"

[tool.poetry.dependencies]
aiofiles = "^0.8.0"
alembic = "^1.7.6"
celery = {extras = ["redis"], version = "^5.2.3"}
click = "^8.0.3"
databases = {extras = ["postgresql"], version = "^0.5.5"}
fastapi = "^0.74.0"
Jinja2 = "^3.0.3"
konfetti = "^0.8.0"
matplotlib = "^3.5.1"
numpy = "^1.21.5"
opencv-python = "^4.5.5"
python = ">=3.8, <3.10"
scipy = "^1.7.3"
simplejson = "^3.17.6"
structlog = "^21.5.0"
tensorflow-hub = "^0.12.0"
tensorflow = "^2.7.0"
scikit-learn = "^1.0.2"
Shapely = "^1.8.0"
uvicorn = {extras = ["standard"], version = "^0.17.5"}
neptune-client = "^0.15.2"

[tool.poetry.dev-dependencies]
black = "^22"
jupyter = "^1.0.0"
mypy = "^0.930"
pylint = "^2.12.2"
pytest = "^6.2.5"
poethepoet = "^0.11.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
black = "black -l 120 -t py39 tsa/ cli/"
sort = "isort cli/ migrations/ test/ tsa/"
test = "pytest test/"
run = "uvicorn tsa.app.app:fast_app"
worker = "celery -A tsa.app.celery:celery_app worker -c 1"
